Fixed shift after transition

--- a/autoscheduler/frontend/src/components/SchedulingPage/CourseSelectColumn/CourseSelectCard/ExpandedCourseCard/ExpandedCourseCard.css
+++ b/autoscheduler/frontend/src/components/SchedulingPage/CourseSelectColumn/CourseSelectCard/ExpandedCourseCard/ExpandedCourseCard.css
@@ -49,7 +49,7 @@
 }
 
 .content {
-    margin-top: 8px;
+    /* margin-top: 8px; */
     margin-left: 8px;
     display: flex;
     flex-direction: column;
@@ -69,7 +69,7 @@
 }
 
 .course-input {
-    margin-top: 4px;
+    margin-top: 12px;
     margin-right: 8px;
 }
 
